# bigquery-mcp-server

./: .gitignore  README.md  README_SERVER.md  main.py  pyproject.toml
client/: README.md  app.py  requirements.txt
client/static/: professional.css  styles.css
client/templates/: index.html
